--- a/popup.html
+++ b/popup.html
@@ -33,6 +33,10 @@
   <input type="color" id="bgColor" value="#ffffff">
   <br>
   <button id="save">Save</button>
+  <p><strong>Tip:</strong> Select text and press <kbd>CTRL</kbd> + <kbd>SHIFT</kbd> + <kbd>Y</kbd> to read aloud.</p>
+
   <script src="popup.js"></script>
+ 
+
 </body>
 </html>
